# AP_Project

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  messenger  mongodb_API_Key.txt
include/: chat.h  client.h  client_app.h  gp_chat.h  message.h  pv_chat.h  server.h
lib/curl-8.1.2/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  curl-config  curl-target.cmake  install_manifest.txt  libcurl-target.cmake  libcurl.pc
lib/curl-8.1.2/builds/CMake/: cmake_uninstall.cmake
lib/curl-8.1.2/builds/lib/: Makefile  cmake_install.cmake  libcurl.so.4.8.0
lib/curl-8.1.2/builds/src/: Makefile  cmake_install.cmake  curl
lib/curl-8.1.2/builds/tests/: Makefile  cmake_install.cmake
lib/curl-8.1.2/builds/tests/data/: Makefile  cmake_install.cmake
lib/curl-8.1.2/builds/tests/libtest/: Makefile  cmake_install.cmake
lib/curl-8.1.2/builds/tests/server/: Makefile  cmake_install.cmake
lib/curl-8.1.2/builds/tests/unit/: Makefile  cmake_install.cmake
lib/curlpp-0.8.1/: install_manifest.txt  libcurlpp.so.1.0.0
lib/curlpp-0.8.1/builds/: cmake_install.cmake  install_manifest.txt  libcurlpp.so.1.0.0
lib/curlpp-0.8.1/builds/extras/: cmake_install.cmake  curlpp-config  curlpp.pc
lib/curlpp-0.8.1/extras/: cmake_install.cmake
src/: chat.cpp  client.cpp  client_app.cpp  gp_chat.cpp  message.cpp  pv_chat.cpp  server.cpp
